tests/paczka1/small_fuzzy/20414861.err
Error in line 9: 3cnzerziJg A222 86,16
Error in line 7: S871 A222 11,1
